--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="SPA for displaying league results and standings." />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="./styles.css">
     <!--
       Notice the use of %BASE_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
